; ModuleID = '/home/carl/AnghaBench/linux/drivers/i2c/busses/extr_i2c-designware-common.c_i2c_dw_release_lock.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/i2c/busses/extr_i2c-designware-common.c_i2c_dw_release_lock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dw_i2c_dev = type { i32 (...)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @i2c_dw_release_lock(%struct.dw_i2c_dev* %0) #0 {
  %2 = alloca %struct.dw_i2c_dev*, align 8
  store %struct.dw_i2c_dev* %0, %struct.dw_i2c_dev** %2, align 8
  %3 = load %struct.dw_i2c_dev*, %struct.dw_i2c_dev** %2, align 8
  %4 = getelementptr inbounds %struct.dw_i2c_dev, %struct.dw_i2c_dev* %3, i32 0, i32 0
  %5 = load i32 (...)*, i32 (...)** %4, align 8
  %6 = icmp ne i32 (...)* %5, null
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.dw_i2c_dev*, %struct.dw_i2c_dev** %2, align 8
  %9 = getelementptr inbounds %struct.dw_i2c_dev, %struct.dw_i2c_dev* %8, i32 0, i32 0
  %10 = load i32 (...)*, i32 (...)** %9, align 8
  %11 = call i32 (...) %10()
  br label %12

12:                                               ; preds = %7, %1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
